--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
         java-version: '11'  
 
     - name: Build with Maven 
-      run: mvn -B package --file pom.xml
+      run: mvn -B package --file ./Sample1/pom.xml
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
