--- a/Sample/pom.xml
+++ b/Sample/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>Sample1</artifactId>
+	<artifactId>Sample</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Sample1</name>
+	<name>Sample</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
